update lecture 2 notebook

--- a/Lecture 2/Introduction_to_Pandas.ipynb
+++ b/Lecture 2/Introduction_to_Pandas.ipynb
@@ -3020,16 +3020,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
     "#### Chained Conditionals\n",
     "\n",
-    "With the chained conditionals, we can filter DataFrame based on several conditions chained by using logic operators.\n",
-    "\n",
-    "[es naxe](https://www.listendata.com/2019/07/how-to-filter-pandas-dataframe.html)\n",
-    "\n",
-    "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.filter.html"
+    "With the chained conditionals, we can filter DataFrame based on several conditions chained by using logic operators."
    ]
   },
   {
