--- a/Lecture 2/Introduction_to_Pandas.ipynb
+++ b/Lecture 2/Introduction_to_Pandas.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Introduction to Pandas\n",
     "\n",
@@ -47,7 +49,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Homework:\n",
     "\n",
@@ -61,7 +65,8 @@
     "ExecuteTime": {
      "end_time": "2020-12-19T08:45:56.470777Z",
      "start_time": "2020-12-19T08:45:56.212448Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -73,7 +78,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Pandas Series\n",
@@ -315,7 +321,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Pandas DataFrame\n",
@@ -824,7 +831,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Shape, Size, type, and Dimension of DataFrame and Series"
@@ -1187,7 +1195,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Index, Selection, Filtering\n",
@@ -3722,7 +3731,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Re(Set)-index, Dropping Entries, Axis"
@@ -5085,7 +5095,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Sorting\n",
@@ -6012,7 +6023,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Column Rename, Reorder, Insertion, Deletion\n",
@@ -7488,7 +7500,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Arithmetic Operations\n",
@@ -7719,7 +7732,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Unique Values and Value Counts\n",
@@ -8183,7 +8197,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Statistics with DataFrame\n",
