update introductory slides and notebook

--- a/Lecture 1/Introduction.ipynb
+++ b/Lecture 1/Introduction.ipynb
@@ -130,11 +130,16 @@
     "---\n",
     "\n",
     "\n",
-    "**მონაცემთა ანალიტიკა** - ეს არის მონაცემების გამოკვლევის, წმენდის, ტრანსფორმაციის და მოდელირების პროცესი რომელიც მიზნად ისახავს მონაცემებიდან ამოიღოს სასარგებლო ინფორმაცია და მიიღოს ამ ინფორმაციაზე დაფუძნებული გადაწყვეტილება.\n",
+    "**მონაცემთა ანალიტიკა** - ეს არის მონაცემების გამოკვლევის და დიაგნოსტირების პროცესი რომელიც მიზნად ისახავს მონაცემებიდან ამოიღოს სასარგებლო ინფორმაცია და მიიღოს ამ ინფორმაციაზე დაფუძნებული გადაწყვეტილება. უფრო კონკრეტულად კი უპასუხოს შემდეგ ორ კითხვას:\n",
+    "\n",
+    "* **რა მოხდა?**\n",
+    "\n",
+    "\n",
+    "* **რატომ მოხდა?**\n",
     "\n",
     "\n",
     "\n",
-    "![alt text](images/data_analysis.png \"Title\")"
+    "![alt text](images/data.png \"Title\")"
    ]
   },
   {
@@ -245,7 +250,10 @@
     "* აქედან გამომდინარე, ღრმა სწავლება რომ იყოს ეფექტური და ეფექტიანი, საჭიროა ნამდვილად დიდი რაოდენობით მონაცემები და შესაბამისი გამოთვლითი რესურსი.\n",
     "\n",
     "\n",
-    "* All deep learning is machine learning, but not all machine learning is deep learning"
+    "* All deep learning is machine learning, but not all machine learning is deep learning\n",
+    "\n",
+    "\n",
+    "> ყველა საუბრობს,  თუ რატომ უნდა გამოვიყენოთ ღრმა სწავლება, მაგრამ არავინ აღნიშნავს თუ **რატომ არ უნდა გამოვიყენოთ იგი**"
    ]
   },
   {
