update lecture 5 templates

--- a/Lecture 5/Merging_DataFrame.ipynb
+++ b/Lecture 5/Merging_DataFrame.ipynb
@@ -9,7 +9,7 @@
     "address a little relational theory and to get some language conventions down. I'm going to bring in an image\n",
     "to help explain some concepts.\n",
     "\n",
-    "![Venn Diagram](merging1.png)\n"
+    "![Venn Diagram](images/merging1.png)\n"
    ]
   },
   {
@@ -39,7 +39,7 @@
     "\n",
     "Here's an image of what that would look like in the Venn diagram.\n",
     "\n",
-    "![Union](merging2.png)"
+    "![Union](images/merging2.png)"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "and we want to calculate the cost of this. In database terminology, this is called an inner join. Or in set\n",
     "theory, the intersection. It is represented in the Venn diagram as the overlapping parts of each circle.\n",
     "\n",
-    "Here's what that looks like: ![Intersection](merging3.png)\n"
+    "Here's what that looks like: ![Intersection](images/merging3.png)\n"
    ]
   },
   {
