--- a/Lecture 5/Join, Combine, Reshape DataFrame.ipynb
+++ b/Lecture 5/Join, Combine, Reshape DataFrame.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Join, Combine, and Reshape a DataFrame\n",
     "\n",
@@ -48,7 +50,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-04T05:29:47.633957Z",
      "start_time": "2021-01-04T05:29:47.344874Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -60,7 +63,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Hierarchical Indexing (MultiIndex)\n",
@@ -567,7 +571,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Combining and Merging\n",
@@ -1492,7 +1497,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Joining and Concatenation\n",
@@ -1851,7 +1857,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Reshaping and Pivoting\n",
@@ -2252,7 +2259,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Groupby\n",
@@ -2673,7 +2681,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Pivot Table\n",
@@ -2914,7 +2923,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Cross-Tabulation\n",
