--- a/Lecture 6/Data Visualization.ipynb
+++ b/Lecture 6/Data Visualization.ipynb
@@ -8,7 +8,42 @@
     "\n",
     "---\n",
     "\n",
-    "Oftentimes, the data is in different files and in different format. The analyst have to be able to deal with such kind of problem and appropriately join different data files in order to do successful operations on the whole data and not only one part of it. In this lecture, we will cover one of the most important and slightly advanced functionalities of Pandas - how to join and combine several DataFrames along with somewhat familiar Pivoting and cross-tabulation operations.\n",
+    "\n",
+    "\"Data visualization (often abbreviated data viz) is an interdisciplinary field that deals with the graphic representation of data...\"  [Data visualization](https://en.wikipedia.org/wiki/Data_visualization)\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "Data visualization is the graphical representation of information and data. By using visual elements like charts, graphs, and maps, data visualization tools provide an accessible way to see and understand trends, outliers, and patterns in data. Making informative visualizations is one of the most important tasks in data analysis. It may be a part of the exploratory process — for example, to help identify outliers or needed data transformations, or as a way of generating ideas for models. For others, building an interactive visualization for the web may be the end goal.\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "One of the early data viz promoter was [Hans Rosling](https://en.wikipedia.org/wiki/Hans_Rosling) and he was the co-founder of the [Gapminder Foundation](https://www.gapminder.org/). The Gapminder has [incredible tool for data viz](https://www.gapminder.org/tools/#$chart-type=bubbles).\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "[Hans TED speech is unforgettable](https://www.ted.com/talks/hans_rosling_the_best_stats_you_ve_ever_seen#t-797)\n",
+    "\n",
+    "\n",
+    "And, not only TED speech - [DON'T PANIC — Hans Rosling showing the facts about population](https://www.youtube.com/watch?v=FACK2knC08E)\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "[Seeing Theory](https://seeing-theory.brown.edu/)\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
     "\n",
     "\n",
     "### Lecture outline\n",
@@ -43,11 +78,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Resources\n",
+    "\n",
+    "\n",
+    "[List of Data Viz](https://datavizproject.com/)\n",
+    "\n",
+    "\n",
+    "[The Data Visualization Catalogee](https://datavizcatalogue.com/)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,7 +169,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Scatter Plots\n",
     "\n",
@@ -140,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -152,7 +197,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -286,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f = df[df['sex'] == 'female']\n",
@@ -302,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2194,7 +2245,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3432,21 +3485,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -3475,6 +3534,58 @@
     "\n",
     "https://plotly.com/python/pandas-backend/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# More Resources - taken from syllabus\n",
+    "\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Anscombe%27s_quartet\n",
+    "\n",
+    "\n",
+    "https://www.autodesk.com/research/publications/same-stats-different-graphs\n",
+    "\n",
+    "\n",
+    "\n",
+    "https://plotly.com/python/\n",
+    "\n",
+    "\n",
+    "https://matplotlib.org/gallery/index.html\n",
+    "\n",
+    "\n",
+    "https://matplotlib.org/tutorials/introductory/pyplot.html#sphx-glr-tutorials-introductory-pyplot-py\n",
+    "\n",
+    "\n",
+    "\n",
+    "https://matplotlib.org/tutorials/index.html\n",
+    "\n",
+    "\n",
+    "\n",
+    "https://towardsdatascience.com/the-next-level-of-data-visualization-in-python-dd6e99039d5e\n",
+    "\n",
+    "\n",
+    "\n",
+    "https://guides.library.duke.edu/datavis/vis_types\n",
+    "\n",
+    "\n",
+    "https://towardsdatascience.com/the-simple-yet-practical-data-visualization-codes-bca99971cdb2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
